--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,14 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
+--index-url http://mirrors.aliyun.com/pypi/simple
+--trusted-host mirrors.aliyun.com
+
 beautifulsoup4==4.6.3
 bleach==2.1.4
 certifi==2018.10.15       # via requests
 chardet==3.0.4            # via requests
+defusedxml==0.5.0         # via python3-openid, social-auth-core
 django-debug-toolbar==1.8
 django-htmlmin==0.10.0
 django-mptt==0.8.7
@@ -16,7 +20,6 @@ djangorestframework==3.6.4
 faker==0.8.18
 html5lib==0.999999999
 idna==2.7                 # via requests
-ipaddress==1.0.22         # via faker
 markdown==2.6.11
 misago-social-auth-app-django==2.1.0
 oauthlib==2.1.0           # via requests-oauthlib, social-auth-core
@@ -25,11 +28,12 @@ pillow==4.1.1
 psycopg2-binary==2.7.5
 pyjwt==1.6.4              # via social-auth-core
 python-dateutil==2.7.5    # via faker
+python3-openid==3.1.0     # via social-auth-core
 pytz==2018.7
 requests-oauthlib==1.0.0  # via social-auth-core
 requests==2.20.0
 six==1.11.0               # via bleach, faker, html5lib, misago-social-auth-app-django, python-dateutil, social-auth-core
-social-auth-core==1.7.0   # via misago-social-auth-app-django
+social-auth-core==2.0.0   # via misago-social-auth-app-django
 sqlparse==0.2.4           # via django-debug-toolbar
 text-unidecode==1.2       # via faker
 unidecode==0.4.21
