--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
     "jquery-mockjax": "^2.0.1",
     "jquery.caret": "^0.3.1",
     "moment": "^2.10.6",
+    "qrcode.react": "^0.9.2",
     "react": "^15.0.0",
     "react-addons-test-utils": "^15.0.0",
     "react-dom": "^15.0.1",
