--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,14 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
---index-url http://mirrors.aliyun.com/pypi/simple
---trusted-host mirrors.aliyun.com
 
+asn1crypto==0.24.0        # via cryptography
 beautifulsoup4==4.6.3
 bleach==2.1.4
 certifi==2018.10.15       # via requests
+cffi==1.11.5              # via cryptography
 chardet==3.0.4            # via requests
+cryptography==2.4.2
 defusedxml==0.5.0         # via python3-openid, social-auth-core
 django-debug-toolbar==1.8
 django-htmlmin==0.10.0
@@ -19,23 +20,27 @@ django==1.11.16
 djangorestframework==3.6.4
 faker==0.8.18
 html5lib==0.999999999
-idna==2.7                 # via requests
+idna==2.7                 # via cryptography, requests
 markdown==2.6.11
 misago-social-auth-app-django==2.1.0
 oauthlib==2.1.0           # via requests-oauthlib, social-auth-core
 olefile==0.46             # via pillow
+optionaldict==0.1.1       # via wechatpy
 pillow==4.1.1
 psycopg2-binary==2.7.5
+pycparser==2.19           # via cffi
 pyjwt==1.6.4              # via social-auth-core
-python-dateutil==2.7.5    # via faker
+python-dateutil==2.7.5    # via faker, wechatpy
 python3-openid==3.1.0     # via social-auth-core
 pytz==2018.7
 requests-oauthlib==1.0.0  # via social-auth-core
 requests==2.20.0
-six==1.11.0               # via bleach, faker, html5lib, misago-social-auth-app-django, python-dateutil, social-auth-core
+six==1.11.0               # via bleach, cryptography, faker, html5lib, misago-social-auth-app-django, python-dateutil, social-auth-core, wechatpy
 social-auth-core==2.0.0   # via misago-social-auth-app-django
 sqlparse==0.2.4           # via django-debug-toolbar
 text-unidecode==1.2       # via faker
 unidecode==0.4.21
 urllib3==1.24.1           # via requests
 webencodings==0.5.1       # via html5lib
+wechatpy==1.7.6
+xmltodict==0.11.0         # via wechatpy
